# MariaAlpha

./: .env.example  .gitignore  AGENTS.md  README.md  build.gradle.kts  docker-compose.ci.yml  docker-compose.demo.yml  docker-compose.yml  justfile  mypy.ini  settings.gradle.kts
analytics-service/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
analytics-service/src/analytics/: __init__.py  __main__.py  config.py  metrics.py
analytics-service/src/analytics/api/: __init__.py  app.py
analytics-service/src/analytics/axes/: __init__.py  matcher.py
analytics-service/src/analytics/consumer/: __init__.py  market_data.py  orders_consumer.py  tca_consumer.py
analytics-service/src/analytics/pnl/: __init__.py  attribution.py
analytics-service/src/analytics/publisher/: __init__.py  risk_alert.py
analytics-service/src/analytics/toxicity/: __init__.py  detector.py
analytics-service/tests/: conftest.py  test_api.py  test_axes.py  test_market_cache.py  test_pnl.py  test_toxicity.py
api-collection/: README.md  bruno.json  collection.bru
api-gateway/: Dockerfile  Dockerfile.local  build.gradle.kts
config/: risk-limits.yml  symbols.yml
docs/: README.md  analytics-service-explainer.md  api-gateway-explainer.md  close-strategy-explainer.md  cloud-deployment-plan.md  execution-engine-explainer.md  finance-mental-map.md  implementation-shortfall-strategy-explainer.md  internal-crossing-engine-explainer.md  ml-signal-service-animation.html  ml-signal-service-explainer.md  momentum-strategy-explainer.md  order-manager-explainer.md  phase-1-completion.md  pov-strategy-explainer.md  smart-order-router-explainer.md  tca-methodology.md  technical-design-document.md  twap-strategy-explainer.md  ui-explainer.md  vwap-strategy-explainer.md
e2e-tests/: build.gradle.kts
execution-engine/: Dockerfile  Dockerfile.local  build.gradle.kts
gradle/: libs.versions.toml
market-data-gateway/: Dockerfile  (+2 more)
ml-signal-service/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
ml-signal-service/scripts/: train_regime_model.py  train_signal_model.py
ml-signal-service/src/ml_signal/: __init__.py  __main__.py  config.py  metrics.py
ml-signal-service/src/ml_signal/api/: app.py
ml-signal-service/src/ml_signal/consumer/: tick_consumer.py
ml-signal-service/src/ml_signal/features/: engine.py  indicators.py  regime_features.py
ml-signal-service/src/ml_signal/grpc_server/: servicer.py
ml-signal-service/src/ml_signal/model/: regime_model.py  signal_model.py
ml-signal-service/tests/: conftest.py  test_api.py  test_feature_engine.py  test_indicators.py  test_regime_features.py  test_regime_integration.py  test_regime_model.py  test_servicer.py  test_signal_model.py  test_stream_signals.py
(+890 files in other folders)
